--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body {
     text-align: center;
 }
 
-.dispositivos{
+.dispositivos__titulo{
     font-size: 48px;
     color: var(--branco-principal);
 }
